...
          <ScrollView
            style={styles.kb}
            contentContainerStyle={styles.content}
            keyboardShouldPersistTaps="handled"
            contentInsetAdjustmentBehavior="always"
          >
            <Heading variant="displaySmall">Check your phone</Heading>
            <Heading
              variant="bodyLarge"
              color="secondary"
              style={{ marginTop: spacing.md }}
            >
              We texted a 6-digit code to{' '}
...
